added sass variables

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,11 @@
-body {
-  background-color: #fe7867;
-}
+/*Soft red */
+/* Yellow */
+/* Dark desaturated cyan */
+/* Dark blue */
+/* Dark moderate cyan */
+/* Very dark desaturated blue */
+/* Very dark grayish blue */
+/* Dark grayish blue */
+/* Grayish blue */
+/* White */
 /*# sourceMappingURL=styles.css.map */
