--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,5 +1,25 @@
-$Primary_1: hsl(7, 99%, 70%);
+$Primary_1: hsl(7, 99%, 70%); /*Soft red */
+$Primary_2: hsl(51, 100%, 49%); /* Yellow */
+$Primary_3: hsl(167, 40%, 24%); /* Dark desaturated cyan */
+$Primary_4: hsl(198, 62%, 26%); /* Dark blue */
+$Primary_5: hsl(168, 34%, 41%); /* Dark moderate cyan */
+$Neutral_1: hsl(212, 27%, 19%); /* Very dark desaturated blue */
+$Neutral_2: hsl(213, 9%, 39%); /* Very dark grayish blue */
+$Neutral_3: hsl(232, 10%, 55%); /* Dark grayish blue */
+$Neutral_4: hsl(210, 4%, 67%); /* Grayish blue */
+$Neutral_5: hsl(0, 0%, 100%); /* White */
+$Font_1: 'Barlow', sans-serif;
+$Font_2: 'Fraunces', serif;
+$Light_Font: 600;
+$Medium_Font: 700;
+$Heavy_Font: 900;
 
-body {
-  background-color: $Primary_1;
-}
+
+
+
+
+
+
+
+
+
