--- a/css/styles.css
+++ b/css/styles.css
@@ -55,10 +55,31 @@ ul {
 .menu-items {
   font-family: "Barlow", sans-serif;
   color: white;
+  font-weight: 600;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: auto auto auto auto;
       grid-template-columns: auto auto auto auto;
+}
+
+.heading {
+  font-family: "Fraunces", serif;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 8.75px;
+  font-size: 28px;
+  font-style: normal;
+  text-align: center;
+}
+
+.heading-text {
+  padding-top: 5rem;
+  padding-left: 13rem;
+}
+
+.down-arrow {
+  padding-left: 52%;
+  padding-top: 3rem;
 }
 
 @media screen and (min-width: 1920px) {
