--- a/css/styles.css
+++ b/css/styles.css
@@ -56,10 +56,24 @@ ul {
   font-family: "Barlow", sans-serif;
   color: white;
   font-weight: 600;
+  font-size: 18px;
+  line-height: 48px;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: auto auto auto auto;
       grid-template-columns: auto auto auto auto;
+}
+
+.menu-4 {
+  height: 3rem;
+  font-family: "Fraunces", serif;
+  font-size: 16px;
+  color: #23303e;
+  background-color: white;
+  text-align: center;
+  margin-right: 48px;
+  border-radius: 25px;
+  text-transform: uppercase;
 }
 
 .heading {
