--- a/css/styles.scss
+++ b/css/styles.scss
@@ -94,12 +94,14 @@ ul {
   padding-top: 3rem;
 }
 
-.egg-block {
+.main-content {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto auto;
 }
 
-.egg-block-text {
+
+.transform-txt {
   padding-left: 165px;
   padding-top: 158px;
 }
@@ -128,6 +130,13 @@ h5 {
   height: 90px;
   line-height: 1.7rem;
 }
+
+.stand-out-txt {
+  padding-left: 165px;
+  padding-top: 158px;
+}
+
+
 
 
 
