--- a/css/styles.scss
+++ b/css/styles.scss
@@ -98,12 +98,58 @@ ul {
   display: grid;
   grid-template-columns: auto auto;
   grid-template-rows: auto auto auto;
+  grid-gap: 0;
 }
 
 
 .transform-txt {
-  padding-left: 165px;
-  padding-top: 158px;
+  padding-top: 50px;
+  grid-column: 1 / span 1;
+  grid-row: 1 / span 1;
+  display: grid;
+  grid-template-rows: 40% 20% 40%;
+  justify-content: center;
+    
+} 
+
+.trans-heading {
+  padding-top: 75px;
+  
+
+}
+
+.trans-para {
+  
+}
+
+.trans-learn {
+  
+}
+
+.transform-img {
+  grid-column: 2 / span 1;
+  grid-row: 1 / span 1;
+  
+}
+
+.stand-out-img {
+  grid-column: 1 / span 1;
+  grid-row: 2 / span 1;
+}
+
+.stand-out-txt {
+  grid-column: 2 / span 1;
+  grid-row: 2 span 1;
+}
+
+.cherry-img {
+  grid-column: 1 / span 1;
+  grid-row: 3 / span 1;
+}
+
+.orange-img {
+  grid-column: 2 / span 1;
+  grid-row: 3 / span 1;
 }
 
 h3 {
@@ -135,6 +181,8 @@ h5 {
   padding-left: 165px;
   padding-top: 158px;
 }
+
+
 
 
 
