--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,6 @@ ul {
       grid-template-columns: auto auto;
   -ms-grid-rows: auto auto auto;
       grid-template-rows: auto auto auto;
-  grid-gap: 0;
 }
 
 .transform-txt {
@@ -134,6 +133,7 @@ ul {
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1 / span 1;
+  height: 600px;
 }
 
 .stand-out-img {
@@ -143,6 +143,7 @@ ul {
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   grid-row: 2 / span 1;
+  height: 600px;
 }
 
 .stand-out-txt {
@@ -159,6 +160,7 @@ ul {
   -ms-grid-row: 3;
   -ms-grid-row-span: 1;
   grid-row: 3 / span 1;
+  height: 600px;
 }
 
 .orange-img {
@@ -168,6 +170,7 @@ ul {
   -ms-grid-row: 3;
   -ms-grid-row-span: 1;
   grid-row: 3 / span 1;
+  height: 600px;
 }
 
 h3 {
